--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Max's Portfolio</title>
+    <title>Sharol's Portfolio</title>
     <link rel="stylesheet" href="Labprog2.css" />
 </head>
 <body>
     <!-- HEADER -->
     <header>
-        <h1 class="name">Max</h1>
+        <h1 class="name">Sharol </h1>
         <div class="contact-info">
             <p>Email: max123@example.com</p>
             <p>Contact: +91 98765 43210</p>
@@ -41,9 +41,9 @@
             <div class="about-text">
                 <h2>About Myself</h2>
                 <p>
-                    Max is a focused and enthusiastic Computer Science Engineering student at NMAMIT University, expected to graduate in 2026. 
-                    With strong skills in programming languages such as Python, Java, and C++, he has completed various projects and certifications. 
-                    Max is passionate about software development and continually learning new technologies. 
+                    Sharol is a focused and enthusiastic Computer Science Engineering student at NMAMIT University, expected to graduate in 2026. 
+                    With strong skills in programming languages such as Python, Java, and C++, she has completed various projects and certifications. 
+                    Sharol is passionate about software development and continually learning new technologies. 
                 </p>
             </div>
         </section>
@@ -116,7 +116,7 @@
             <a href="#">Twitter</a> |
             <a href="#">GitHub</a>
         </div>
-        <p>&copy; 2025 Max. All rights reserved.</p>
+        <p>&copy; 2025 Sharol. All rights reserved.</p>
     </footer>
 
 </body>
