--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1 class="name">Sharol </h1>
         <div class="contact-info">
-            <p>Email: max123@example.com</p>
+            <p>Email: sharol123@example.com</p>
             <p>Contact: +91 98765 43210</p>
 
         <address>
