--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- ABOUT -->
         <section class="about">
             <div class="photo">
-                <img src="/home/student/Downloads/avatar-profile-icon-flat-style-female-user-profile-vector-illustration-isolated-background-women-profile-sign-business-concept_157943-38866.jpeg" alt="Passport Photo" />
+                <img src="student-avatar.jpg" alt="Passport Photo" />
             </div>
             <div class="about-text">
                 <h2>About Myself</h2>
